Update gpg config keyserver and pinentry

--- a/dotfiles/gnupg/gpg-agent.conf
+++ b/dotfiles/gnupg/gpg-agent.conf
@@ -1,4 +1,7 @@
-pinentry-program /usr/bin/pinentry
+# linux
+#pinentry-program /usr/bin/pinentry
+# osx
+pinentry-program /usr/local/bin/pinentry
 
 enable-ssh-support
 
