--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -67,6 +67,12 @@ bind-key W source-file ~/.tmux/work
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# balance splits
+unbind-key h
+unbind-key v
+bind-key h select-layout even-horizontal
+bind-key v select-layout even-vertical
+
 ################################################################################
 #                                                                              #
 #  COLORS                                                                      #
