--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -73,6 +73,9 @@ unbind-key v
 bind-key h select-layout even-horizontal
 bind-key v select-layout even-vertical
 
+# create new session
+bind-key C new-session -s zzz
+
 ################################################################################
 #                                                                              #
 #  COLORS                                                                      #
