Allow tmux to name session

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -74,7 +74,7 @@ bind-key h select-layout even-horizontal
 bind-key v select-layout even-vertical
 
 # create new session
-bind-key C new-session -s zzz
+bind-key C new-session
 
 ################################################################################
 #                                                                              #
