Clean up config for new release of tmux 1.9

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -90,11 +90,11 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
 
 # theming
-set -w -g window-status-current-fg colour1
+set -w -g window-status-current-style fg=colour1
 set -g status-bg colour18
 set -g status-fg colour245
-set -g pane-border-bg default
-set -g pane-active-border-fg colour1
+set -g pane-border-style bg=default
+set -g pane-active-border-style fg=colour1
 
 ################################################################################
 #                                                                              #
@@ -227,9 +227,7 @@ set -g window-status-separator "  "
 
 # flag activity in the window list
 setw -g monitor-activity on
-setw -g window-status-activity-attr none
-setw -g window-status-activity-bg colour18
-setw -g window-status-activity-fg yellow
+setw -g window-status-activity-style bg=colour18,fg=yellow,none
 
 ################################################################################
 #                                                                              #
