Beef up the history limit

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -31,6 +31,9 @@ set-option -g set-clipboard off
 # dont wait for escape key as part of a key sequence
 set -sg escape-time 0
 
+# capture some more history
+set -g history-limit 50000
+
 ################################################################################
 #                                                                              #
 # BINDINGS                                                                     #
