--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -167,13 +167,13 @@ unbind-key -T copy-mode TripleClick1Pane
 
 # copy selected text after a double or triple click initiated while in vi copy mode
 # use copy-pipe-and-cancel instead of copy-pipe if you want to exit after selection
-bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t{mouse} -X select-word\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
-bind-key -T copy-mode-vi TripleClick1Pane send-keys -t{mouse} -X select-line\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
+bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t'{mouse}' -X select-word\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
+bind-key -T copy-mode-vi TripleClick1Pane send-keys -t'{mouse}' -X select-line\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
 
 # do the same for double and triple clicks when not in vi copy mode
 # use copy-pipe-and-cancel instead of copy-pipe if you want to exit after selection
-bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-word; send-keys -t{mouse} -X copy-pipe \"$TMUX_COPY_COMMAND\""
-bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-line; send-keys -t{mouse} -X copy-pipe \"$TMUX_COPY_COMMAND\""
+bind-key -T root DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -t'{mouse}' -X copy-pipe \"$TMUX_COPY_COMMAND\""
+bind-key -T root TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -t'{mouse}' -X copy-pipe \"$TMUX_COPY_COMMAND\""
 
 # middle click exit copy mode and paste, in normal mode paste
 unbind-key -T root MouseUp2Pane
@@ -182,8 +182,8 @@ bind-key -T root MouseUp2Pane paste-buffer
 bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
 
 # scroll 3 lines at a time instead of default 5; don't extend dragged selections
-bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-up
-bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-down
+bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-up
+bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-down
 
 # word delimiters, second option is neccessary to append a ', default is ` -_@'.
 set-window-option -g word-separators ' "=,()[]'
