Get config re-aligned for tmux 3.1b

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -34,6 +34,9 @@ set -sg escape-time 0
 # capture some more history
 set -g history-limit 50000
 
+# don't wrap searches
+set-option -w -g wrap-search off
+
 ################################################################################
 #                                                                              #
 # BINDINGS                                                                     #
@@ -118,72 +121,51 @@ set -g pane-active-border-style fg=colour1
 #                                                                              #
 ################################################################################
 
-# enable mouse for pane and window selection, pane resizing
-set -g mouse on
+set-option -g mouse on
 
-# Restore pre-2.1 behavior of scrolling with the scrollwheel in Vim, less, copy
-# mode etc, otherwise entering copy mode if not already in it.
-#
-#   if in copy mode (pane_in_mode) || using the mouse already (mouse_any_flag)
-#     pass through mouse events to current pane (send -Mt=)
-#   elsif in alternate screen mode
-#     send `Up` key
-#   else
-#     enter copy mode (-e exits if we scroll to the bottom)
-#   end
+# bind-key -T root WheelUpPane \
+#   if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+#     'send -Mt=' \
+#     'if-shell -Ft= "#{alternate_on}" "send -t= Up" "copy-mode -et="'
+# bind-key -T root WheelDownPane \
+#   if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+#     'send -Mt=' \
+#     'if-shell -Ft= "#{alternate_on}"  "send -t= Down" "send -Mt="'
 
-bind-key -T root WheelUpPane \
-  if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-    'send -Mt=' \
-    'if-shell -Ft= "#{alternate_on}" "send -t= Up" "copy-mode -et="'
-bind-key -T root WheelDownPane \
-  if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-    'send -Mt=' \
-    'if-shell -Ft= "#{alternate_on}"  "send -t= Down" "send -Mt="'
+# # unbind all double and tripple clicks
+# unbind-key -T copy-mode-vi DoubleClick1Pane
+# unbind-key -T copy-mode-vi TripleClick1Pane
+# unbind-key -T root DoubleClick1Pane
+# unbind-key -T root TripleClick1Pane
+# unbind-key -T copy-mode DoubleClick1Pane
+# unbind-key -T copy-mode TripleClick1Pane
 
-# unbind all keys except scroll events
-# unbind-key -t vi-copy MouseDown1Pane
-# unbind-key -t vi-copy MouseDown1Pane
-# unbind-key -t vi-copy MouseUp1Pane
-# unbind-key -t vi-copy MouseDragEnd1Pane
-
-# stay in copy mode on drag end, exit on escape
+# stay in copy mode on drag end
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
-bind-key -T copy-mode-vi Escape send-keys -X cancel
-
-# press y in copy mode to copy selection to clipboard
-bind-key -T copy-mode-vi y send-keys -X copy-pipe $TMUX_COPY_COMMAND
 
 # copy selected text at the end of a mouse click and drag selection
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe $TMUX_COPY_COMMAND
-
-# unbind all double and tripple clicks
-unbind-key -T copy-mode-vi DoubleClick1Pane
-unbind-key -T copy-mode-vi TripleClick1Pane
-unbind-key -T root DoubleClick1Pane
-unbind-key -T root TripleClick1Pane
-unbind-key -T copy-mode DoubleClick1Pane
-unbind-key -T copy-mode TripleClick1Pane
-
-# copy selected text after a double or triple click initiated while in vi copy mode
-# use copy-pipe-and-cancel instead of copy-pipe if you want to exit after selection
-bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t'{mouse}' -X select-word\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
-bind-key -T copy-mode-vi TripleClick1Pane send-keys -t'{mouse}' -X select-line\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
-
-# do the same for double and triple clicks when not in vi copy mode
-# use copy-pipe-and-cancel instead of copy-pipe if you want to exit after selection
-bind-key -T root DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -t'{mouse}' -X copy-pipe \"$TMUX_COPY_COMMAND\""
-bind-key -T root TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -t'{mouse}' -X copy-pipe \"$TMUX_COPY_COMMAND\""
-
-# middle click exit copy mode and paste, in normal mode paste
-unbind-key -T root MouseUp2Pane
-unbind-key -T copy-mode-vi MouseUp2Pane
-bind-key -T root MouseUp2Pane paste-buffer
-bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND
 
 # scroll 3 lines at a time instead of default 5; don't extend dragged selections
 bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-up
 bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-down
+
+# make double and triple click work outside of copy mode (already works inside it with default bindings)
+bind-key -T root DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
+bind-key -T root TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
+
+# don't exit copy mode on double or triple click
+bind-key -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
+bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
+
+# for those times when C-c and q are not enough
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+
+# # middle click exit copy mode and paste, in normal mode paste
+# unbind-key -T root MouseUp2Pane
+# unbind-key -T copy-mode-vi MouseUp2Pane
+# bind-key -T root MouseUp2Pane paste-buffer
+# bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
 
 # word delimiters, second option is neccessary to append a ', default is ` -_@'.
 set-window-option -g word-separators ' "=,()[]'
