--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,3 +1,5 @@
+# tmux version 3.1b
+
 ################################################################################
 #                                                                              #
 # ENVIRONMENT DETECTION                                                        #
