--- a/.gitmodules
+++ b/.gitmodules
@@ -146,3 +146,6 @@
 [submodule "dotfiles/vim/pack/bundle/opt/vim-json"]
 	path = dotfiles/vim/pack/bundle/opt/vim-json
 	url = git@github.com:elzr/vim-json.git
+[submodule "dotfiles/vim/pack/bundle/opt/vim-tmux-navigator"]
+	path = dotfiles/vim/pack/bundle/opt/vim-tmux-navigator
+	url = git@github.com:christoomey/vim-tmux-navigator.git
