--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -50,13 +50,13 @@ unbind-key C-b
 set -g prefix C-Space
 bind-key Space send-prefix
 
-# use shift-arrow keys (left and right) to rotate panes
-bind-key -n S-Right select-pane -t :.+
-bind-key -n S-Left select-pane -t :.-
-
-# use shift-arrow keys (up and down) to rotate windows
-bind-key -n S-Up next-window
-bind-key -n S-Down previous-window
+# # use shift-arrow keys (left and right) to rotate panes
+# bind-key -n S-Right select-pane -t :.+
+# bind-key -n S-Left select-pane -t :.-
+# 
+# # use shift-arrow keys (up and down) to rotate windows
+# bind-key -n S-Up next-window
+# bind-key -n S-Down previous-window
 
 # use vi navigation and search in scroll mode ctrl-b [
 setw -g mode-keys vi
@@ -83,6 +83,32 @@ bind-key v select-layout even-vertical
 
 # create new session
 bind-key C new-session
+
+################################################################################
+#                                                                              #
+#  VIM-TMUX-NAVIGATOR SUPPORT                                                  #
+#                                                                              #
+################################################################################
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 ################################################################################
 #                                                                              #
