--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -45,18 +45,10 @@ set-option -w -g wrap-search off
 #                                                                              #
 ################################################################################
 
-# remap prefix
+# remap prefix to ctrl + space
 unbind-key C-b
 set -g prefix C-Space
 bind-key Space send-prefix
-
-# # use shift-arrow keys (left and right) to rotate panes
-# bind-key -n S-Right select-pane -t :.+
-# bind-key -n S-Left select-pane -t :.-
-# 
-# # use shift-arrow keys (up and down) to rotate windows
-# bind-key -n S-Up next-window
-# bind-key -n S-Down previous-window
 
 # use vi navigation and search in scroll mode ctrl-b [
 setw -g mode-keys vi
@@ -98,17 +90,11 @@ bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 ################################################################################
 #                                                                              #
