--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -175,11 +175,11 @@ bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}
 # for those times when C-c and q are not enough
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 
-# # middle click exit copy mode and paste, in normal mode paste
-# unbind-key -T root MouseUp2Pane
-# unbind-key -T copy-mode-vi MouseUp2Pane
-# bind-key -T root MouseUp2Pane paste-buffer
-# bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
+# middle click exit copy mode and paste, in normal mode paste
+unbind-key -T root MouseUp2Pane
+unbind-key -T copy-mode-vi MouseUp2Pane
+bind-key -T root MouseUp2Pane paste-buffer
+bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
 
 # word delimiters, second option is neccessary to append a ', default is ` -_@'.
 set-window-option -g word-separators ' "=,()[]'
