--- a/applications/ddclient/ddclient.conf
+++ b/applications/ddclient/ddclient.conf
@@ -1,6 +1,6 @@
 use=web, web=dynamicdns.park-your-domain.com/getip
 ssl=yes
 protocol=googledomains
-login={{ DDClientLogin }}
-password={{ DDClientPassword }}
-{{ DDClientFQDN }}
+login={{ DDclientLogin }}
+password={{ DDclientPassword }}
+{{ DDclientFQDN }}
