--- a/.config.example
+++ b/.config.example
@@ -214,8 +214,8 @@ SYMLINK06 = /Users/pbuell/Repos/mit/mit:/Users/pbuell/.todo/addons/mit
 ################################################################################
 
 
-GitUsername = codybuell                                 # github username
-GitSignKey  = 0555DEBF3BE6281EAB1E44DE74DC8D3B3B3F03FE  # gpg key to sig commits
+GitUsername = codybuell                                # github username
+GitSignKey  = 0555DEBF3BE6281EAB1E44DE74DC8D3B3B3F03FE # gpg key to sign commits
 
 
 ################################################################################
