Fix double, triple click copy to system clipboard
Current version 3.1b required some quoting of the system copy command.
This has likely been broken for a few versions of TMUX. Also uncommented
some unbind statements as they feel like added assurance against
unexpected TMUX behavior.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -147,30 +147,30 @@ set-option -g mouse on
 #     'if-shell -Ft= "#{alternate_on}"  "send -t= Down" "send -Mt="'
 
 # # unbind all double and tripple clicks
-# unbind-key -T copy-mode-vi DoubleClick1Pane
-# unbind-key -T copy-mode-vi TripleClick1Pane
-# unbind-key -T root DoubleClick1Pane
-# unbind-key -T root TripleClick1Pane
-# unbind-key -T copy-mode DoubleClick1Pane
-# unbind-key -T copy-mode TripleClick1Pane
+unbind-key -T copy-mode-vi DoubleClick1Pane
+unbind-key -T copy-mode-vi TripleClick1Pane
+unbind-key -T root DoubleClick1Pane
+unbind-key -T root TripleClick1Pane
+unbind-key -T copy-mode DoubleClick1Pane
+unbind-key -T copy-mode TripleClick1Pane
 
 # stay in copy mode on drag end
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 # copy selected text at the end of a mouse click and drag selection
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear "$TMUX_COPY_COMMAND"
 
 # scroll 3 lines at a time instead of default 5; don't extend dragged selections
 bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-up
 bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-down
 
 # make double and triple click work outside of copy mode (already works inside it with default bindings)
-bind-key -T root DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
-bind-key -T root TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
+bind-key -T root DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -X copy-pipe-no-clear \"$TMUX_COPY_COMMAND\""
+bind-key -T root TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -X copy-pipe-no-clear \"$TMUX_COPY_COMMAND\""
 
 # don't exit copy mode on double or triple click
-bind-key -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
-bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -X copy-pipe-no-clear $TMUX_COPY_COMMAND"
+bind-key -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word; send-keys -X copy-pipe-no-clear \"$TMUX_COPY_COMMAND\""
+bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line; send-keys -X copy-pipe-no-clear \"$TMUX_COPY_COMMAND\""
 
 # for those times when C-c and q are not enough
 bind-key -T copy-mode-vi Escape send-keys -X cancel
